<resources>
    <string name="app_name">CT_MONEY</string>

    <string name="title_activity_boot">BootActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>

    <!-- 导航栏标题 -->
    <string name="tab_homepage">首页</string>
    <string name="tab_productpage">投资</string>
    <string name="tab_richespage">我的</string>
    <string name="tab_setttingpage">更多</string>

    <!-- 登陆页面 -->
    <string name="login__hint_user">请输入手机号码</string>

    <!-- home page-->
    <string name="invest_total">累计投资</string>
    <string name="income_total">累计赚取</string>

    <!-- 手势密码-->
    <string name="pd_gesture_set">为了账号安全, 请设置手势密码</string>
    <string name="pd_gesture_set_again">请再次输入密码</string>
    <string name="pd_gesture_set_succeed">设置手势密码成功</string>
    <string name="pd_gesture_set_diff">两次密码输入不一致，请重新输入</string>
    <string name="pd_gesture_prompt_error">至少要绘制三个点，请重试</string>
    <string name="pd_gesture_forget">忘记手势密码?</string>
    <string name="pd_gesture_otheruser">其他账户登陆</string>

    <!-- 安全设置页面-->
    <string name="safe_page_prompt">24小时内首次充值送20元:首次充值送10元。请登录长投在线网页版进行充值。</string>

    <!-- 推荐好友页面-->
    <string name="promotion_page_prompt">
        温馨提示
        \n 1、活动时间:2015年1月21日开启,长期有效。
        \n 2、仅通过推荐链接成功注册，推荐人才可活动20元礼金。
        \n 3、如出现下述情况时，您将不能成为该好友的推荐人 。被推荐的好友在初次点击红包链接后，注册过程中有刷新、离开、关闭页面、
        没有一次性完成步骤。
        \n 4、如有疑问直接拨打客服热线：400-880-6270。</string>


    <string name="umeng_common_action_info_exist">正在下载中.</string>

    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>

    <string name="umeng_common_action_pause">暂停</string>

    <string name="umeng_common_action_continue">继续</string>

    <string name="umeng_common_action_cancel">取消</string>

    <string name="umeng_common_download_notification_prefix">正在下载: </string>

    <string name="umeng_common_pause_notification_prefix">暂停: </string>

    <string name="umeng_common_start_download_notification">正在下载应用</string>

    <string name="umeng_common_start_patch_notification">正在更新安装包</string>

    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>

    <string name="umeng_common_download_failed">下载失败</string>

    <string name="umeng_common_download_finish">下载完成，请点击安装</string>

    <string name="umeng_common_patch_finish">更新完成，请点击安装</string>

    <string name="umeng_common_silent_download_finish">新版本已经准备好，请点击安装</string>

    <string name="UMBreak_Network">未联网</string>

    <string name="UMUpdateTitle">发现新版本</string>

    <string name="UMNewVersion">最新版本: </string>

    <string name="UMUpdateContent">更新内容</string>

    <string name="UMUpdateSize">仅需要下载:</string>

    <string name="UMTargetSize">新版本大小:</string>

    <string name="UMGprsCondition">（提示：非WIFI环境）</string>

    <string name="UMUpdateNow">立即更新</string>

    <string name="UMAppUpdate">应用更新</string>

    <string name="UMNotNow">以后再说</string>

    <string name="UMIgnore">忽略该版</string>

    <string name="UMToast_IsUpdating">正在更新中....</string>

    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>

</resources>
